--- a/qr-code-component-main/qrChallenge.css
+++ b/qr-code-component-main/qrChallenge.css
@@ -1,46 +1,48 @@
 body {
     background-color: hsl(212, 45%, 89%);
-    margin: auto;
-    max-width: 500px;
+    /*max-width: 500px;*/
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 #card-qr {
     background-color: hsl(0, 0%, 100%);
-    height: 530px;
-    width: 360px;
+    /*height: 60%;*/
+    width: 17em;
     border-radius: 20px;
-    margin-top: 40%;
+    margin-top: 2em;
     display: flex;
     flex-direction: column;
-    align-content: center;
-    justify-content: center;
 }
 
 #text-box {
     text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 10%;
 }
 
 #text {
     font-family: 'Outfit', sans-serif;
     font-weight: 400;
     color: hsl(220, 15%, 55%);
-    font-size: 15px;
-    padding: 1px;
+    font-size: 0.75em;
 }
 
 #title {
     font-family: 'Outfit', sans-serif;
     font-weight: 700;
     color: hsl(218, 44%, 22%);
+    font-size: 1.25em;
 }
 
 #qr {
-    height: 310px;
-    width: 310px;
+    /*height: 10%;*/
+    margin: 2%;
+    margin-top: 5%;
+    width: 90%;
+    padding: 0;
     border-radius: 20px;
 }
 
@@ -49,10 +51,30 @@ body {
     justify-content: center;
 }
 
-footer {
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    height: 30px;
+.attribution {
+    margin-top: 8em;
     text-align: center;
+}
+
+@media (max-width: 414px) {
+    #title {
+        font-size: 1.60em;
+    }
+
+    #text {
+        font-size: 1.15em;
+    }
+
+    #text-box {
+        margin-bottom: 5%;
+    }
+
+    #card-qr {
+        margin-top: 8em;
+        width: 23em;
+    }
+
+    .attribution {
+        margin: 8.5em 4em;
+    }
 }
