--- a/interactive-rating-component-main/interactiveRating.css
+++ b/interactive-rating-component-main/interactiveRating.css
@@ -10,8 +10,8 @@ body {
 section {
     background-color: hsl(213, 19%, 18%);
     margin-top: 10em;
-    width: 17em;
-    height: 20em;
+    width: 22em;
+    height: 22em;
     border-radius: 10%;
 }
 
@@ -28,7 +28,7 @@ img {
     margin-left: 1em;
     padding: 0.5em;
     width: 1em;
-    margin-right: 14em;
+    margin-right: 18em;
 }
 
 #text {
@@ -53,23 +53,37 @@ p {
 span {
     background-color: hsl(216, 12%, 54%);
     color: white;
-    width: 2em;
-    height: 2em;
+    width: 2.5em;
+    height: 2.5em;
     text-align: center;
     border-radius: 100%;
-    margin: 0em 0.75em;
+    margin: 0em 0.5em;
     font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+span:hover {
+    background-color: hsl(25, 97%, 53%);
+    font-weight: 700;
 }
 
 button {
-    width: 10em;
-    height: 2em;
+    width: 23em;
+    height: 4em;
     margin-top: 2em;
     background-color: hsl(25, 97%, 53%);
     color: white;
     font-weight: 700;
     border-style: none;
-    border-radius: 60%;
+    /*border-width: 20em;*/
+    border-radius: 43%;
+}
+
+button:hover {
+    background-color: white;
+    color: hsl(25, 97%, 53%)
 }
 
 
@@ -81,5 +95,9 @@ button {
 @media (max-width: 375px) {
     h1 {
         font-size: 2em;
+    }
+
+    section {
+        width: 20em;
     }
 }
